appId: uk.gleissner.c64commander
env:
  LONG_TIMEOUT: ${LONG_TIMEOUT || "60000"}
  SHORT_TIMEOUT: ${SHORT_TIMEOUT || "10000"}
  TIMEOUT: ${TIMEOUT || "30000"}
tags:
  - subflow
---
- runFlow: launch-and-wait.yaml
- retry:
    maxRetries: 3
    commands:
      - runFlow:
          when:
            visible: "Continue in Demo Mode"
          file: continue-demo.yaml
      - tapOn:
          text: "Continue in Demo Mode"
          optional: true
      - runFlow: dismiss-tour.yaml
      - tapOn:
          text: "Got it"
          optional: true
      - tapOn:
          text: "Wait"
          optional: true
      - tapOn:
          text: "Close app"
          optional: true
      - waitForAnimationToEnd
      - extendedWaitUntil:
          visible:
            text: "Home"
          timeout: ${TIMEOUT}
- tapOn:
    id: "tab-play"
- extendedWaitUntil:
    visible: "Playlist"
    timeout: ${TIMEOUT}
- assertVisible:
    id: "page-play"
- assertVisible: "Playlist"
- scrollUntilVisible:
    element:
      id: "add-items-to-playlist"
    direction: DOWN
    timeout: ${TIMEOUT}
- waitForAnimationToEnd
- takeScreenshot: play-files
- retry:
    maxRetries: 3
    commands:
      - scrollUntilVisible:
          element:
            id: "add-items-to-playlist"
          direction: DOWN
          timeout: ${TIMEOUT}
      - tapOn:
          id: "add-items-to-playlist"
      - tapOn:
          text: "Add items"
          optional: true
      - tapOn:
          text: "Add more items"
          optional: true
      - tapOn:
          text: "Add items to playlist"
          optional: true
      - waitForAnimationToEnd
      - extendedWaitUntil:
          visible: "Choose source"
          timeout: ${TIMEOUT}
- scrollUntilVisible:
    element:
      id: "import-option-local"
    direction: DOWN
    timeout: ${TIMEOUT}
- assertVisible:
    id: "import-option-local"
- takeScreenshot: choose-source
